--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
-    "@ionic-native/core": "^5.19.1",
-    "@ionic-native/http": "^5.30.0",
-    "@ionic-native/splash-screen": "^5.19.1",
-    "@ionic-native/status-bar": "^5.19.1",
-    "@ionic/angular": "^4.11.7",
-    "bootstrap": "^4.4.1",
+    "@ionic-native/core": "^5.31.1",
+    "@ionic-native/http": "^5.31.1",
+    "@ionic-native/splash-screen": "^5.31.1",
+    "@ionic-native/status-bar": "^5.31.1",
+    "@ionic/angular": "^4.11.13",
+    "bootstrap": "^4.6.0",
     "cordova-android": "9.0.0",
-    "core-js": "^2.6.11",
+    "core-js": "^2.6.12",
     "hammerjs": "^2.0.8",
-    "highcharts": "^8.0.0",
-    "highcharts-angular": "^2.4.0",
-    "rxjs": "^6.5.4",
-    "tslib": "^1.9.0",
+    "highcharts": "^8.2.2",
+    "highcharts-angular": "^2.9.0",
+    "rxjs": "^6.6.3",
+    "tslib": "^1.14.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -46,27 +46,27 @@
     "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
-    "@ionic/angular-toolkit": "^2.1.1",
+    "@ionic/angular-toolkit": "^2.3.3",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.2.1",
+    "codelyzer": "^5.2.2",
     "cordova-plugin-advanced-http": "^3.1.0",
-    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
-    "cordova-plugin-splashscreen": "^5.0.2",
-    "cordova-plugin-statusbar": "^2.4.2",
-    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-splashscreen": "^5.0.4",
+    "cordova-plugin-statusbar": "^2.4.3",
+    "cordova-plugin-whitelist": "^1.3.4",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.1",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
