--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/splash-screen": "^5.31.1",
     "@ionic-native/status-bar": "^5.31.1",
     "@ionic/angular": "^4.11.13",
+    "@ionic/storage": "^2.2.0",
     "bootstrap": "^4.6.0",
     "cordova-android": "9.0.0",
     "core-js": "^2.6.12",
