--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@ionic/angular": "^4.11.13",
     "@ionic/storage": "^2.2.0",
     "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
     "cordova-sqlite-storage": "^5.1.0",
     "core-js": "^2.6.12",
     "hammerjs": "^2.0.8",
