--- a/package.json
+++ b/package.json
@@ -28,14 +28,18 @@
     "@ionic-native/status-bar": "^5.31.1",
     "@ionic/angular": "^4.11.13",
     "@ionic/storage": "^2.2.0",
+    "angularfire2": "^5.4.2",
     "bootstrap": "^4.6.0",
     "chart.js": "^2.9.4",
     "cordova-sqlite-storage": "^5.1.0",
     "core-js": "^2.6.12",
+    "firebase": "^8.2.9",
     "hammerjs": "^2.0.8",
     "highcharts": "^8.2.2",
     "highcharts-angular": "^2.9.0",
-    "rxjs": "^6.6.3",
+    "promise-polyfill": "^8.2.0",
+    "rxjs": "^6.6.6",
+    "rxjs-compat": "^6.6.6",
     "tslib": "^1.14.1",
     "zone.js": "~0.9.1"
   },
