--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/cdk": "~8.2.3",
     "@angular/common": "^8.2.14",
     "@angular/core": "~8.1.2",
+    "@angular/fire": "^6.0.4-canary.9a26fbe",
     "@angular/forms": "~8.1.2",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.1.2",
